2010-08-31  john ffitch  <jpff@codemist.co.uk>

	* Engine/csound_orc_expressions.c: Many changes to make if_then
	etc work

2010-08-28  Michael Gogins <michael.gogins@gmail.com>

	* Replaced csound-build.tex with How_to_Build_Csound_on_Windows.doc,
        in Microsoft Word format, which should be more accessible to users.

        * Changed multi-threading in the head branch to use OpenMP instead of
        PT hreads, for greater clarity and maintability.

2010-08-26  john ffitch  <jpff@codemist.co.uk>

	* Engine/csound_orc_expressions.c (create_cond_expression): New
	code to deal with (a?b:c) variant
	(is_expression_node): Added S_Q to expression operators
	(create_expression): Call create_cond_expression

2010-08-25  John ff  <jpff@cs.bath.ac.uk>

	* Engine/insert.c (insert): In pset case no not zero excess opcodes

2010-08-10  Michael Gogins <michael.gogins@gmail.com>

	* Engine/typetabl.h: Supplied missing type mask for 'J' type code,
	i.e. k-rate scalar defaulting to -1, used in "STK" opcodes and others.

	* Opcodes/stk/STKOpcodes.cpp: Changed threading from 5 to 3,
	changed MIDI controller number and value parameters to 'J' type.

	* Updated evironment, build, and installer scripts for new Windows
	version built on new Core i7, Windows 7 computer.

2010-08-09  john ffitch  <jpff@codemist.co.uk>

	* InOut/libsnd.c (sfopenin): Correct warning message

	* Top/csound.c ("C"): Default value of inchnls is now -1

	* Engine/otran.c (oload): Set inchnls to nchnls if not explicit

2010-08-03  john ffitch  <jpff@codemist.co.uk>

	* Engine/csound_orc.y (ifac): Typo -- used S_MOD rather than S_DIV

2010-08-01  john ffitch  <jpff@codemist.co.uk>

	* Top/csound.c (csoundAddSpinSample): Needs to use nchnls_i

2010-07-31  john ffitch  <jpff@codemist.co.uk>

	* Engine/csound_orc_semantics.c (handle_optional_args):
	* Engine/rdorch.c (getoptxt): Added J arg type

2010-07-28  John ff  <jpff@cs.bath.ac.uk>

	* Opcodes/urandom.c (urand_run, urand_init, urand_deinit): New